<resources>
    <string name="app_name">NeWork</string>
    <string name="like">Like post</string>
    <string name="share">Share post</string>
    <string name="play_video">Play video</string>
    <string name="profile">Profile</string>
    <string name="Create">Create</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="view_profile">Viewprofile</string>
    <string name="Posts">Posts</string>
    <string name="Events">Events</string>
    <string name="Users">Users</string>
    <string name="Login">Login</string>
    <string name="Name">Name</string>
    <string name="Password">Password</string>
    <string name="Confirm_password">Confirm password</string>
    <string name="Registration">Registration</string>
    <string name="registration">Registration</string>
    <string name="avatar">avatar</string>
    <string name="dont_have_account_register">dont have account? Register</string>
    <string name="don_t_have_account_register">Don\'t have account? register</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="volume">volume</string>
    <string name="play">play</string>
    <string name="camera">camera</string>
    <string name="attach">attach</string>
    <string name="users">users</string>
    <string name="location">location</string>
    <string name="post">post</string>
    <string name="zoom_out">zoom_out</string>
    <string name="zoom_in">zoom_in</string>
    <string name="placeholder_login">placeholder_login</string>
    <string name="logout">logout</string>
</resources>