<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <!-- Контент под тулбаром -->
        <ScrollView
            android:id="@+id/scroll_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="64dp"
            android:fillViewport="true"
            android:paddingStart="24dp"
            android:paddingEnd="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <!-- Аватар -->
                <FrameLayout
                    android:id="@+id/avatar_container"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="16dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/iv_avatar"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:contentDescription="@string/avatar"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_monogram"
                        app:shapeAppearanceOverlay="@style/CircleImageStyle"/>
                </FrameLayout>

                <!-- Поле логина -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_login"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:boxBackgroundColor="@color/filled_background"
                    app:boxStrokeColor="@color/purple_primary"
                    app:hintTextColor="@color/purple_primary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Login"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Поле имени -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:boxBackgroundColor="@color/filled_background"
                    app:boxStrokeColor="@color/purple_primary"
                    app:hintTextColor="@color/purple_primary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Name"
                        android:inputType="textPersonName"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Поле пароля -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:boxBackgroundColor="@color/filled_background"
                    app:boxStrokeColor="@color/purple_primary"
                    app:hintTextColor="@color/purple_primary"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Password"
                        android:inputType="textPassword"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Поле подтверждения пароля -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password_confirm"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:boxBackgroundColor="@color/filled_background"
                    app:boxStrokeColor="@color/purple_primary"
                    app:hintTextColor="@color/purple_primary"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Confirm_password"
                        android:inputType="textPassword"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Кнопка регистрации -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_register"
                    android:layout_width="346dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/bg_button_ripple"
                    android:contentDescription="@string/Registration"
                    android:text="@string/registration"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:backgroundTint="@color/purple_primary"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp"
                    app:strokeWidth="0dp" />

            </LinearLayout>
        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>